--- a/.github/workflows/dotnet.yml
+++ b/.github/workflows/dotnet.yml
@@ -29,6 +29,7 @@ jobs:
   terraform:
         name: 'Terraform'
         runs-on: ubuntu-latest
+        needs: build
         environment: production
     
         # Use the Bash shell regardless whether the GitHub Actions runner is ubuntu-latest, macos-latest, or windows-latest
