--- a/.github/workflows/dotnet.yml
+++ b/.github/workflows/dotnet.yml
@@ -1,7 +1,7 @@
 # This workflow will build a .NET project
 # For more information see: https://docs.github.com/en/actions/automating-builds-and-tests/building-and-testing-net
 
-name: .NET
+name: Build and Deploy to Azure
 
 on:
   push:
@@ -26,8 +26,23 @@ jobs:
       run: dotnet build --no-restore
     - name: Test
       run: dotnet test --no-build --verbosity normal
+  publish:
+    name: 'Publish Docker Image to Registry'
+    runs-on: ubuntu-latest
+    steps:
+      - uses: actions/checkout@v3
+      - name: Setup .NET
+        uses: actions/setup-dotnet@v3
+        with:
+          dotnet-version: 8.0.x
+      - name: Login to Docker
+        run: echo ${{ secrets.DOCKER_PASSWORD }} | docker login ghcr.io -u ${{ secrets.DOCKER_USERNAME }} --password-stdin
+      - name: Push Image to Registry
+        run: |
+          docker build -t ghcr.io/${{ secrets.DOCKER_USERNAME }}/dotnetapp:${{ github.sha }} .
+          docker push ghcr.io/${{ secrets.DOCKER_USERNAME }}/dotnetapp:${{ github.sha }}
   terraform:
-        name: 'Terraform'
+        name: 'Build Infrastructure'
         runs-on: ubuntu-latest
         needs: build
         environment: production
