--- a/.github/workflows/dotnet.yml
+++ b/.github/workflows/dotnet.yml
@@ -29,6 +29,7 @@ jobs:
   publish:
     name: 'Publish Docker Image to Registry'
     runs-on: ubuntu-latest
+    needs: build
     steps:
       - uses: actions/checkout@v3
       - name: Setup .NET
@@ -44,7 +45,7 @@ jobs:
   terraform:
         name: 'Build Infrastructure'
         runs-on: ubuntu-latest
-        needs: build
+        needs: publish
         environment: production
     
         # Use the Bash shell regardless whether the GitHub Actions runner is ubuntu-latest, macos-latest, or windows-latest
