--- a/.github/workflows/workflow.yml
+++ b/.github/workflows/workflow.yml
@@ -63,8 +63,24 @@ jobs:
         - name: Terraform Apply
           if: github.ref == 'refs/heads/"main"' && github.event_name == 'push'
           run: terraform apply -auto-approve -input=false
+  publish:
+            name: 'Publish Docker Image to Registry'
+            runs-on: ubuntu-latest
+            needs: build
+            steps:
+              - uses: actions/checkout@v3
+              - name: Setup .NET
+                uses: actions/setup-dotnet@v3
+                with:
+                  dotnet-version: 8.0.x
+              - name: Login to Docker
+                run: echo ${{ secrets.DOCKER_PASSWORD }} | docker login ghcr.io -u ${{ secrets.DOCKER_USERNAME }} --password-stdin
+              - name: Push Image to Registry
+                run: |
+                  docker build -t ghcr.io/${{ secrets.DOCKER_USERNAME }}/dotnetapp:${{ github.sha }} .
+                  docker push ghcr.io/${{ secrets.DOCKER_USERNAME }}/dotnetapp:${{ github.sha }}
   app_infrastructure:
-            name: 'Build Infrastructure'
+            name: 'Build App Infrastructure'
             runs-on: ubuntu-latest
             needs: infrastructure
             environment: production
@@ -102,21 +118,6 @@ jobs:
               if: github.ref == 'refs/heads/"main"' 
               run: terraform apply -auto-approve -input=false
 
-  publish:
-    name: 'Publish Docker Image to Registry'
-    runs-on: ubuntu-latest
-    needs: build
-    steps:
-      - uses: actions/checkout@v3
-      - name: Setup .NET
-        uses: actions/setup-dotnet@v3
-        with:
-          dotnet-version: 8.0.x
-      - name: Login to Docker
-        run: echo ${{ secrets.DOCKER_PASSWORD }} | docker login ghcr.io -u ${{ secrets.DOCKER_USERNAME }} --password-stdin
-      - name: Push Image to Registry
-        run: |
-          docker build -t ghcr.io/${{ secrets.DOCKER_USERNAME }}/dotnetapp:${{ github.sha }} .
-          docker push ghcr.io/${{ secrets.DOCKER_USERNAME }}/dotnetapp:${{ github.sha }}
+ 
  
     
