--- a/.github/workflows/workflow.yml
+++ b/.github/workflows/workflow.yml
@@ -28,8 +28,7 @@ jobs:
       run: dotnet test --no-build --verbosity normal
   infrastructure:
         name: 'Build Infrastructure'
-        runs-on: ubuntu-latest
-        needs: publish
+        runs-on: ubuntu-latest        
         environment: production
     
         # Use the Bash shell regardless whether the GitHub Actions runner is ubuntu-latest, macos-latest, or windows-latest
@@ -66,7 +65,7 @@ jobs:
   publish:
             name: 'Publish Docker Image to Registry'
             runs-on: ubuntu-latest
-            needs: build
+            needs: infrastructure
             steps:
               - uses: actions/checkout@v3
               - name: Setup .NET
@@ -82,7 +81,7 @@ jobs:
   app_infrastructure:
             name: 'Build App Infrastructure'
             runs-on: ubuntu-latest
-            needs: infrastructure
+            needs: app_infrastructure
             environment: production
         
             # Use the Bash shell regardless whether the GitHub Actions runner is ubuntu-latest, macos-latest, or windows-latest
