--- a/.github/workflows/workflow.yml
+++ b/.github/workflows/workflow.yml
@@ -65,7 +65,7 @@ jobs:
   publish:
             name: 'Publish Docker Image to Registry'
             runs-on: ubuntu-latest
-            needs: infrastructure
+            needs: [infrastructure, build]
             steps:
               - uses: actions/checkout@v3
               - name: Setup .NET
