--- a/TestApplication/TestApplication.csproj
+++ b/TestApplication/TestApplication.csproj
@@ -5,6 +5,7 @@
         <Nullable>enable</Nullable>
         <ImplicitUsings>enable</ImplicitUsings>
         <InvariantGlobalization>true</InvariantGlobalization>
+        <ContainerRegistry>bswebappcontainer.azurecr.io</ContainerRegistry>
     </PropertyGroup>
 
     <ItemGroup>
