--- a/.github/workflows/workflow.yml
+++ b/.github/workflows/workflow.yml
@@ -74,7 +74,7 @@ jobs:
               - name: Login to Docker
                 run: echo ${{ secrets.DOCKER_PASSWORD }} | docker login ${{secrets.DOCKER_REGISTRY}} -u ${{ secrets.DOCKER_USERNAME }} --password ${{ secrets.DOCKER_PASSWORD }}       
               - name: Publish Docker Image
-                run: dotnet publish -c Release --os linux --arch x64 -p:PublishProfile=DefaultContainer,ContainerRegistry=${{ secrets.DOCKER_REGISTRY }}/azure-webappcontainer:${{ github.sha }}      
+                run: dotnet publish -c Release --os linux --arch x64 -p:PublishProfile=DefaultContainer -p ContainerImageTag=${{github.sha}},ContainerRepository="azure-webappcontainer" -p ContainerRegistry=${{secrets.DOCKER_REGISTRY}}
   app_infrastructure:
             name: 'Build App Infrastructure'
             runs-on: ubuntu-latest
