--- a/.github/workflows/workflow.yml
+++ b/.github/workflows/workflow.yml
@@ -111,7 +111,7 @@ jobs:
               # On push to "main", build or change infrastructure according to Terraform configuration files
               # Note: It is recommended to set up a required "strict" status check in your repository for "Terraform Cloud". See the documentation on "strict" required status checks for more information: https://help.github.com/en/github/administering-a-repository/types-of-required-status-checks
             - name: Terraform Apply
-              if: github.ref == 'refs/heads/"main"' 
+              if: github.ref == 'refs/heads/main' 
               run: terraform apply -auto-approve -var "DockerRegistry=${{secrets.DOCKER_REGISTRY}}" -var "DockerUserName=${{secrets.DOCKER_USERNAME}}" -var "DockerPassword=${{secrets.DOCKER_PASSWORD}}" -var "DockerImageTag=${{github.sha}}" -var "DockerImageName=azure-webappcontainer" -input=false
 
  
