Add ContainerPort 8080 to TestApplication.csproj

--- a/TestApplication/TestApplication.csproj
+++ b/TestApplication/TestApplication.csproj
@@ -5,7 +5,7 @@
         <Nullable>enable</Nullable>
         <ImplicitUsings>enable</ImplicitUsings>
         <InvariantGlobalization>true</InvariantGlobalization>
-        <ContainerRegistry>bswebappcontainer.azurecr.io</ContainerRegistry>
+        <ContainerPort Include="8080" Type="tcp" />
     </PropertyGroup>
 
     <ItemGroup>
