--- a/.github/workflows/workflow.yml
+++ b/.github/workflows/workflow.yml
@@ -15,6 +15,12 @@ jobs:
     runs-on: ubuntu-latest
 
     steps:
+    - uses: dorny/paths-filter@v2
+      id: src
+      with:
+        filters: | 
+          src:
+              - 'TestApplication/**'    
     - uses: actions/checkout@v3
     - name: Setup .NET
       uses: actions/setup-dotnet@v3
@@ -29,17 +35,24 @@ jobs:
   infrastructure:
         name: 'Build Infrastructure'
         runs-on: ubuntu-latest        
-       
+  
         # Use the Bash shell regardless whether the GitHub Actions runner is ubuntu-latest, macos-latest, or windows-latest
         defaults:
           run:
             shell: bash
             working-directory: ./infra/azure    
         steps:
+        - uses: actions/checkout@v3
+        - uses: dorny/paths-filter@v2
+          id: infra
+          with:
+            filters: | 
+              infra:
+                  - 'infra/azure/**'    
         # Checkout the repository to the GitHub Actions runner
         - name: Checkout
           uses: actions/checkout@v3
-    
+          
         # Install the latest version of Terraform CLI and configure the Terraform CLI configuration file with a Terraform Cloud user API token
         - name: Setup Terraform
           uses: hashicorp/setup-terraform@v1
@@ -66,6 +79,12 @@ jobs:
             runs-on: ubuntu-latest
             needs: [infrastructure, build]
             steps:
+              - uses: dorny/paths-filter@v2
+                id: src
+                with:
+                  filters: | 
+                    src:
+                        - 'TestApplication/**'
               - uses: actions/checkout@v3
               - name: Setup .NET
                 uses: actions/setup-dotnet@v3
@@ -87,6 +106,14 @@ jobs:
                 working-directory: ./infra/app
         
             steps:
+            - uses: dorny/paths-filter@v2
+              id: app_infra
+              with:
+                filters: | 
+                  infra:
+                      - 'infra/app/**'
+                  src:
+                      - 'TestApplication/**'
             # Checkout the repository to the GitHub Actions runner
             - name: Checkout
               uses: actions/checkout@v3
