--- a/.github/workflows/workflow.yml
+++ b/.github/workflows/workflow.yml
@@ -10,19 +10,31 @@ on:
     branches: [ "main" ]
 
 jobs:
-  build:
-    name: '.Net Restore, Build and Test'
+  changes:
     runs-on: ubuntu-latest
-
+    outputs:
+      src: ${{ steps.changes.outputs.src }}
+      infra: ${{ steps.changes.outputs.infra }}
+      infra_app: ${{ steps.changes.outputs.infra_app }}
     steps:
     - uses: actions/checkout@v3
     - uses: dorny/paths-filter@v2
-      id: src
+      id: changes
       with:
-        filters: | 
+        filters: |
           src:
-              - 'TestApplication/**'    
-   
+            - 'TestApplication/**'
+          infra:
+            - 'infra/azure/**'
+          infra_app:
+            - 'infra/app/**'  
+  build:
+    name: '.Net Restore, Build and Test'
+    runs-on: ubuntu-latest
+    needs: [changes]
+    if: ${{ needs.changes.outputs.src == 'true' }}
+    steps:
+    - uses: actions/checkout@v3
     - name: Setup .NET
       uses: actions/setup-dotnet@v3
       with:
@@ -36,20 +48,15 @@ jobs:
   infrastructure:
         name: 'Build Infrastructure'
         runs-on: ubuntu-latest        
-  
+        needs: [changes]
+        if: ${{ needs.changes.outputs.infra == 'true' }}
         # Use the Bash shell regardless whether the GitHub Actions runner is ubuntu-latest, macos-latest, or windows-latest
         defaults:
           run:
             shell: bash
             working-directory: ./infra/azure    
         steps:
-        - uses: actions/checkout@v3
-        - uses: dorny/paths-filter@v2
-          id: infra
-          with:
-            filters: | 
-              infra:
-                  - 'infra/azure/**'    
+        - uses: actions/checkout@v3  
         # Checkout the repository to the GitHub Actions runner
         - name: Checkout
           uses: actions/checkout@v3
@@ -78,7 +85,8 @@ jobs:
   publish:
             name: 'Publish Docker Image to Registry'
             runs-on: ubuntu-latest
-            needs: [infrastructure, build]
+            needs: [infrastructure, build, changes]
+            if: ${{ needs.changes.outputs.src == 'true' }}
             steps:
               - uses: dorny/paths-filter@v2
                 id: src
@@ -98,7 +106,8 @@ jobs:
   app_infrastructure:
             name: 'Build App Infrastructure'
             runs-on: ubuntu-latest
-            needs: [infrastructure, publish]          
+            needs: [infrastructure, publish, changes]
+            if: ${{ needs.changes.outputs.infra_app == 'true' }}          
         
             # Use the Bash shell regardless whether the GitHub Actions runner is ubuntu-latest, macos-latest, or windows-latest
             defaults:
