--- a/.github/workflows/workflow.yml
+++ b/.github/workflows/workflow.yml
@@ -36,7 +36,7 @@ jobs:
     steps:
     - uses: actions/checkout@v4
     - name: Setup .NET
-      uses: actions/setup-dotnet@v3
+      uses: actions/setup-dotnet@v4
       with:
         dotnet-version: 8.0.x
     - name: Restore dependencies
@@ -85,7 +85,7 @@ jobs:
   publish:
             name: 'Publish Docker Image to Registry'
             runs-on: ubuntu-latest
-            needs: [infrastructure, build, changes]
+            needs: [infrastructure, build]
             if: ${{ needs.changes.outputs.src == 'true' }}
             steps:            
               - uses: actions/checkout@v4
@@ -100,7 +100,7 @@ jobs:
   app_infrastructure:
             name: 'Build App Infrastructure'
             runs-on: ubuntu-latest
-            needs: [infrastructure, publish, changes]
+            needs: [infrastructure, publish]
             if: ${{ needs.changes.outputs.infra_app == 'true' }}          
         
             # Use the Bash shell regardless whether the GitHub Actions runner is ubuntu-latest, macos-latest, or windows-latest
